@@ -1,4 +1,11 @@
-AC_DEFUN([GNOME_INIT],
+dnl
+dnl GNOME_INIT_HOOK (script-if-gnome-enabled, failflag)
+dnl
+dnl if failflag is "fail" then GNOME_INIT_HOOK will abort if gnomeConf.sh
+dnl is not found. 
+dnl
+
+AC_DEFUN([GNOME_INIT_HOOK],
 [	
 	AC_SUBST(GNOME_LIBS)
 	AC_SUBST(GNOMEUI_LIBS)
@@ -29,9 +36,13 @@ AC_DEFUN([GNOME_INIT],
 
 	AC_ARG_WITH(gnome,
 	[  --with-gnome            Specify prefix for GNOME files],[
-	LDFLAGS="$LDFLAGS -L$withval/lib"
-	CFLAGS="$CFLAGS -I$withval/include"
-	gnome_prefix=$withval/lib
+	if test x$withval = xyes; then
+	    $1
+        else
+	    LDFLAGS="$LDFLAGS -L$withval/lib"
+	    CFLAGS="$CFLAGS -I$withval/include"
+	    gnome_prefix=$withval/lib
+  	fi
 	])
 
         AC_MSG_CHECKING(for gnomeConf.sh file in $gnome_prefix)
@@ -39,8 +50,15 @@ AC_DEFUN([GNOME_INIT],
 	    AC_MSG_RESULT(found)
 	    echo "loading gnome configuration from $gnome_prefix/gnomeConf.sh"
 	    . $gnome_prefix/gnomeConf.sh
+	    $1
 	else
 	    AC_MSG_RESULT(not found)
-	    AC_MSG_ERROR(Could not find the gnomeConf.sh file that is generated by gnome-libs install)
+ 	    if test x$2 = xfail; then
+	        AC_MSG_ERROR(Could not find the gnomeConf.sh file that is generated by gnome-libs install)
+ 	    fi
 	fi
+])
+
+AC_DEFUN([GNOME_INIT],[
+	GNOME_INIT_HOOK([],fail)
 ])
