@@ -1,3 +1,10 @@
+1998-03-19  Miguel de Icaza  <miguel@nuclecu.unam.mx>
+
+	* gnome.m4 (GNOME_INIT_HOOK): Provide a way to hook some code to
+	execute;  Accept a probe mode.
+	
+	(GNOME_INIT): Define in terms of GNOME_INIT_HOOK.
+
 Thu Mar 19 00:17:46 1998  Tom Tromey  <tromey@cygnus.com>
 
 	* gnome-support.m4: Cache results of check for
